--- a/week2/index.html
+++ b/week2/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Solution for Module 2</title>
+    <title>Assignment Solution for Module 2</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -21,9 +21,9 @@
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12">
             <section class="association">
-                <h2>The Association System</h2>
+                <h2>The Association</h2>
                 <p>
-                    This is a method for creating Mnemonic images for numbers based on things that the numbers remind you of. For example, 02 might be a bicycle, because a bicycle has two wheels. 52 might be a deck of cards, because a deck of cards has 52 cards. 
+                    The name speaks for itself!This is a method for creating Mnemonic images for numbers based on things that the numbers remind you of. For example, 02 might be a bicycle, because a bicycle has two wheels. 52 might be a deck of cards, because a deck of cards has 52 cards. 
                 </p>
             </section>
         </div>
