--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -20,7 +20,7 @@
             </section>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12">
-            <section class="Association">
+            <section class="association">
                 <h2>The Association System for numbers</h2>
                 <p>
                     This is a method for creating Mnemonic images for numbers based on things that the numbers remind you of. For example, 02 might be a bicycle, because a bicycle has two wheels. 52 might be a deck of cards, because a deck of cards has 52 cards. 
@@ -28,7 +28,7 @@
             </section>
         </div>
         <div class="col-lg-4 col-md-12 col-sm-12">
-            <section class="Bens">
+            <section class="bens">
                 <h2>Ben System for numbers</h2>
                 <p>
                    "The basic principle is the same as everyone else uses, visualising images at points along a mental route or journey. I don't use the person-action-object ideas of some people, I just have three 'objects' at each point on my route. Some of these objects are people, some are things. I 'see' them arranged from left to right, or top to bottom, and interacting in various ways according to rules I made up as I went along, depending on which objects come together in what order. Each object is made from a combination of two playing cards, or three decimal digits, or ten binary digits. The name of the object starts with a one-syllable sound made up of a consonant, a vowel and another consonant."
