--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -11,7 +11,7 @@
 <body>
     <h1>Memory techniques</h1>
     <div class="row">
-        <div class="col-lg-4 col-md-6 col-sm-12">
+        <div class="large-1 medium-2 small-3">
             <section class="palace">
                 <h2>The Memory Palace</h2>
                 <p>
@@ -19,7 +19,7 @@
                 </p>
             </section>
         </div>
-        <div class="col-lg-4 col-md-6 col-sm-12">
+        <div class="large-1 medium-2 small-3">
             <section class="association">
                 <h2>Association</h2>
                 <p>
@@ -27,7 +27,7 @@
                 </p>
             </section>
         </div>
-        <div class="col-lg-4 col-md-6 col-sm-12">
+        <div class="large-1 medium-2 small-3">
             <section class="bens">
                 <h2>Ben System</h2>
                 <p>
