--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -21,7 +21,7 @@
         </div>
         <div class="col-large-1 col-medium-2 col-small-3">
             <section class="association">
-                <h2>Association</h2>
+                <h2>Association system</h2>
                 <p>
                     This is a method for creating Mnemonic images for numbers based on things that the numbers remind you of. For example, 02 might be a bicycle, because a bicycle has two wheels. 52 might be a deck of cards, because a deck of cards has 52 cards. 
                 </p>
@@ -29,7 +29,7 @@
         </div>
         <div class="col-large-1 col-medium-2 col-small-3">
             <section class="bens">
-                <h2>Ben System</h2>
+                <h2>Ben's System</h2>
                 <p>
                    "The basic principle is the same as everyone else uses, visualising images at points along a mental route or journey. I don't use the person-action-object ideas of some people, I just have three 'objects' at each point on my route. Some of these objects are people, some are things. I 'see' them arranged from left to right, or top to bottom, and interacting in various ways according to rules I made up as I went along, depending on which objects come together in what order. Each object is made from a combination of two playing cards, or three decimal digits, or ten binary digits. The name of the object starts with a one-syllable sound made up of a consonant, a vowel and another consonant."
                 </p>
